<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_messages"
        android:title="@string/pref_title_new_notifications" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_messages"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_email_notifications" />

    <EditTextPreference
        android:defaultValue="petemorley3@gmail.com"
        android:dependency="notifications_new_message"
        android:inputType="textEmailAddress"
        android:key="notifications_default_email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_default_email" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_messages"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_sound_notifications" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
